# Team_3_Roadkill

./: README.md
Dapjeongneo/Dapjeongneo/: ContentView.swift  DapjeongneoApp.swift
Dapjeongneo/Dapjeongneo.xcodeproj/: project.pbxproj
Dapjeongneo/Dapjeongneo.xcodeproj/project.xcworkspace/xcuserdata/junnos.xcuserdatad/: UserInterfaceState.xcuserstate
Dapjeongneo/Dapjeongneo.xcodeproj/xcuserdata/junnos.xcuserdatad/xcschemes/: xcschememanagement.plist
Roadkill/Roadkill/: ContentView.swift  RoadkillApp.swift  SpeechRecognizer.swift
Roadkill/Roadkill.xcodeproj/: project.pbxproj
Roadkill/Roadkill/AppIntents/: ShortcutsProvider.swift
Roadkill/Roadkill/AppIntents/Asset/: AssetIntents.swift
Roadkill/Roadkill/Assets.xcassets/AppIcon.appiconset/: Contents.json
Roadkill/Roadkill/Manager/: AudioManager.swift  AudioRecordManager.swift  LocationManager.swift  NavigationManager.swift  SpeechRecognizer.swift
Roadkill/Roadkill/Model/: Report.swift
Roadkill/Roadkill/Supporting Files/: recording.json
Roadkill/Roadkill/Views/: IntroductionView.swift  RecordView.swift  ReportListView.swift
coreml_converter/: .gitignore  .pre-commit-config.yaml  pyproject.toml
coreml_converter/src/: __main__.py  const.py  converter.py  optimizer.py  runner.py
coreml_converter/src/models/: __init__.py  model_loader.py  models.py
