[project]
name = "coreml_converter"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Junnos ", email = "junnos.dev@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["coremltools==8.0b1", "torch==2.3.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
coreml_converter = { path = ".", editable = true }

[tool.pixi.tasks]
convert = "python -m src"
c = { depends-on = ["convert"] }
